--- a/.github/workflows/arm_compilation.yml
+++ b/.github/workflows/arm_compilation.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install NDK
         if: runner.os == 'Linux'
         run: |
-          if [ $COMP == ndk ]; then
+          if [ "$COMP" = "ndk" ]; then
             NDKV="27.2.12479018"
             ANDROID_ROOT=/usr/local/lib/android
             ANDROID_SDK_ROOT=$ANDROID_ROOT/sdk
@@ -62,7 +62,7 @@ jobs:
 
       - name: Check compiler
         run: |
-          if [ $COMP == ndk ]; then
+          if [ "$COMP" = "ndk" ]; then
             export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
           fi
           $COMPCXX -v
