--- a/.github/workflows/arm_compilation.yml
+++ b/.github/workflows/arm_compilation.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install NDK
         if: runner.os == 'Linux'
         run: |
-          if [ $COMP == ndk ]; then
+          if [ "$COMP" = "ndk" ]; then
             NDKV="27.2.12479018"
             ANDROID_ROOT=/usr/local/lib/android
             ANDROID_SDK_ROOT=$ANDROID_ROOT/sdk
@@ -51,6 +51,7 @@ jobs:
 
       - name: Extract the bench number from the commit history
         run: |
+          benchref=""
           for hash in $(git rev-list -100 HEAD); do
             benchref=$(git show -s $hash | tac | grep -m 1 -o -x '[[:space:]]*\b[Bb]ench[ :]\+[1-9][0-9]\{5,7\}\b[[:space:]]*' | sed 's/[^0-9]//g') && break || true
           done
@@ -61,7 +62,7 @@ jobs:
 
       - name: Check compiler
         run: |
-          if [ $COMP == ndk ]; then
+          if [ "$COMP" = "ndk" ]; then
             export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
           fi
           $COMPCXX -v
@@ -83,7 +84,7 @@ jobs:
           make clean
           make -j4 profile-build ARCH=$BINARY COMP=$COMP RUN_PREFIX=$EMU
           make strip ARCH=$BINARY COMP=$COMP
-          #RUN_PREFIX=$EMU ../tests/signature.sh "$benchref"
+          RUN_PREFIX=$EMU ../tests/signature.sh "$benchref"
 
           # Ensure artifact folder exists
           mkdir -p artifact
