--- a/.github/workflows/DON-setup.yml
+++ b/.github/workflows/DON-setup.yml
@@ -62,13 +62,20 @@ jobs:
           fi
 
       # Create new pre-release, upload_binaries.yml will upload the binaries to pre-release.
-      - name: Create Prerelease
+      - name: Create Prerelease (force recreate)
         if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
-        uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
-        with:
-          name: DON dev-${{ env.COMMIT_DATE }}-${{ env.COMMIT_SHA }}
-          tag_name: DON-dev-${{ env.COMMIT_DATE }}-${{ env.COMMIT_SHA }}
-          prerelease: true
+        run: |
+          TAG="DON-dev-${COMMIT_DATE}-${COMMIT_SHA}"
+
+          # Delete if it already exists (safe)
+          gh release delete "$TAG" --cleanup-tag -y || true
+
+          # Create the pre-release
+          gh release create "$TAG" \
+            --prerelease \
+            --title "$TAG"
+        env:
+          GITHUB_TOKEN: ${{ secrets.token }}
   Matrix:
     runs-on: ubuntu-latest
     outputs:
