--- a/.github/workflows/DON-setup.yml
+++ b/.github/workflows/DON-setup.yml
@@ -26,20 +26,23 @@ jobs:
           # Install required packages
           sudo apt-get update
           sudo apt-get install -y curl jq
-
-          echo "COMMIT_SHA_TAG=$(jq -r 'map(select(.prerelease)) | first | .tag_name' <<< $(curl -s https://api.github.com/repos/${{ github.repository_owner }}/DON/releases))" >> $GITHUB_ENV
-
+  
+          # Get the first pre-release tag_name
+          COMMIT_SHA_TAG=$(curl -s https://api.github.com/repos/${{ github.repository_owner }}/DON/releases \
+            | jq -r 'map(select(.prerelease)) | first | .tag_name')
+          echo "COMMIT_SHA_TAG=$COMMIT_SHA_TAG" >> $GITHUB_ENV
+  
       - name: Delete previous pre-release and tag
-        run: gh release delete ${{ env.COMMIT_SHA_TAG }} --cleanup-tag
         if: env.COMMIT_SHA_TAG != 'null'
+        run: gh release delete "$COMMIT_SHA_TAG" --cleanup-tag -y || true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Make sure that an old ci that still runs on master doesn't recreate a prerelease
       - name: Check Pullable Commits
         id: check_commits
         run: |
-          git fetch
+          git fetch origin main
           CHANGES=$(git rev-list HEAD..origin/main --count)
           echo "CHANGES=$CHANGES" >> $GITHUB_ENV
 
@@ -75,7 +78,7 @@ jobs:
             --prerelease \
             --title "$TAG"
         env:
-          GH_TOKEN: ${{ secrets.token }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   Matrix:
     runs-on: ubuntu-latest
     outputs:
