--- a/.github/workflows/DON-setup.yml
+++ b/.github/workflows/DON-setup.yml
@@ -26,17 +26,22 @@ jobs:
           # Install required packages
           sudo apt-get update
           sudo apt-get install -y curl jq
-  
+
           # Get the first pre-release tag_name
           COMMIT_SHA_TAG=$(curl -s https://api.github.com/repos/${{ github.repository_owner }}/DON/releases \
             | jq -r 'map(select(.prerelease)) | first | .tag_name')
           echo "COMMIT_SHA_TAG=$COMMIT_SHA_TAG" >> $GITHUB_ENV
-  
+
       - name: Delete previous pre-release and tag
         if: env.COMMIT_SHA_TAG != 'null'
         run: gh release delete "$COMMIT_SHA_TAG" --cleanup-tag -y || true
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get commit info
+        run: |
+          echo "COMMIT_SHA=$(git rev-parse HEAD | cut -c 1-8)" >> $GITHUB_ENV
+          echo "COMMIT_DATE=$(git show -s --date=format:'%Y%m%d' --format=%cd HEAD)" >> $GITHUB_ENV
 
       # Make sure that an old ci that still runs on master doesn't recreate a prerelease
       - name: Check Pullable Commits
@@ -46,22 +51,15 @@ jobs:
           CHANGES=$(git rev-list HEAD..origin/main --count)
           echo "CHANGES=$CHANGES" >> $GITHUB_ENV
 
-      - name: Get last commit SHA
-        id: last_commit
-        run: echo "COMMIT_SHA=$(git rev-parse HEAD | cut -c 1-8)" >> $GITHUB_ENV
-
-      - name: Get commit date
-        id: commit_date
-        run: echo "COMMIT_DATE=$(git show -s --date=format:'%Y%m%d' --format=%cd HEAD)" >> $GITHUB_ENV
-
+      # Check for "Official release version of DON" in the commit message
       - name: Official Release?
-        id: official_release
-        # Check for "Official release version of DON" in the commit message
         run: |
           if git log -1 --pretty=%B | grep -q "Official release version of DON"; then
             echo "OFFICIAL_RELEASE=true" >> $GITHUB_ENV
+            echo "This is an official release."
           else
             echo "OFFICIAL_RELEASE=false" >> $GITHUB_ENV
+            echo "This is NOT an official release."
           fi
 
       # Create new pre-release, upload_binaries.yml will upload the binaries to pre-release.
@@ -69,10 +67,9 @@ jobs:
         if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         run: |
           TAG="DON-dev-${COMMIT_DATE}-${COMMIT_SHA}"
-
+          echo "Creating pre-release with tag: $TAG"
           # Delete if it already exists (safe)
           gh release delete "$TAG" --cleanup-tag -y || true
-
           # Create the pre-release
           gh release create "$TAG" \
             --prerelease \
