--- a/.github/workflows/upload_binaries.yml
+++ b/.github/workflows/upload_binaries.yml
@@ -61,10 +61,34 @@ jobs:
         run: |
           zip -r DON-$NAME-$BINARY.zip DON
 
+      # Upload official release assets if this is a tagged commit
+      - name: Upload official release asset
+        if: startsWith(github.ref_name, 'DON_') && github.ref_type == 'tag'
+        uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
+        with:
+          files: DON-${{ matrix.config.simple_name }}-${{ matrix.binaries }}.${{ matrix.config.archive_ext }}
+          token: ${{ secrets.token }}
+
       - name: Get commit info
         run: |
           echo "COMMIT_SHA=$(git rev-parse HEAD | cut -c 1-8)" >> $GITHUB_ENV
           echo "COMMIT_DATE=$(git show -s --date=format:'%Y%m%d' --format=%cd HEAD)" >> $GITHUB_ENV
+
+      # Make sure that an old ci that still runs on master doesn't recreate a prerelease
+      - name: Check Pullable Commits
+        run: |
+          git fetch origin main
+          CHANGES=$(git rev-list HEAD..origin/main --count)
+          echo "CHANGES=$CHANGES" >> $GITHUB_ENV
+
+      # Check for "Official release version of DON" in the commit message
+      - name: Official Release?
+        run: |
+          if git log -1 --pretty=%B | grep -q "Official release version of DON"; then
+            echo "OFFICIAL_RELEASE=true" >> $GITHUB_ENV
+          else
+            echo "OFFICIAL_RELEASE=false" >> $GITHUB_ENV
+          fi
 
       # UPLOAD ONLY — RELEASE IS CREATED ELSEWHERE
       - name: Upload prerelease asset
