--- a/.github/workflows/avx2_compilers.yml
+++ b/.github/workflows/avx2_compilers.yml
@@ -40,45 +40,45 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: |
-          if grep -q "buster" /etc/os-release; then
-            echo "Debian Buster detected. Switching to archive repositories..."
-            echo "deb http://archive.debian.org/debian buster main contrib non-free" > /etc/apt/sources.list
-            echo "deb http://archive.debian.org/debian-security buster/updates main contrib non-free" >> /etc/apt/sources.list
-            echo 'Acquire::Check-Valid-Until "false";' > /etc/apt/apt.conf.d/99-ignore-valid-until
-          fi
+      # - name: Install dependencies
+      #   run: |
+      #     if grep -q "buster" /etc/os-release; then
+      #       echo "Debian Buster detected. Switching to archive repositories..."
+      #       echo "deb http://archive.debian.org/debian buster main contrib non-free" > /etc/apt/sources.list
+      #       echo "deb http://archive.debian.org/debian-security buster/updates main contrib non-free" >> /etc/apt/sources.list
+      #       echo 'Acquire::Check-Valid-Until "false";' > /etc/apt/apt.conf.d/99-ignore-valid-until
+      #     fi
 
-          apt-get update
-          apt-get install -y curl git make
+      #     apt-get update
+      #     apt-get install -y curl git make
 
-      - name: Set up Clang
-        if: ${{ matrix.is_clang && matrix.image == 'ubuntu:rolling' }}
-        run: |
-          if [ "${{ matrix.ver }}" -le 20 ]; then
-            apt-get install -y clang-${{ matrix.ver }}
-          else
-            apt-get install -y \
-              clang-${{ matrix.ver }} \
-              llvm-${{ matrix.ver }}-dev \
-              llvm-${{ matrix.ver }}-linker-tools \
-              lld-${{ matrix.ver }}
-          fi
+      # - name: Set up Clang
+      #   if: ${{ matrix.is_clang && matrix.image == 'ubuntu:rolling' }}
+      #   run: |
+      #     if [ "${{ matrix.ver }}" -le 20 ]; then
+      #       apt-get install -y clang-${{ matrix.ver }}
+      #     else
+      #       apt-get install -y \
+      #         clang-${{ matrix.ver }} \
+      #         llvm-${{ matrix.ver }}-dev \
+      #         llvm-${{ matrix.ver }}-linker-tools \
+      #         lld-${{ matrix.ver }}
+      #     fi
 
-      - name: Download network
-        working-directory: src
-        run: make net
+      # - name: Download network
+      #   working-directory: src
+      #   run: make net
 
-      - name: Build avx2 binary
-        working-directory: src
-        run: |
-          export CXXFLAGS="-Werror"
-          if [ "${{ matrix.ver }}" -ge 20 ]; then
-            apt install -y lld
-          fi
-          make clean
-          make -j build ARCH=x86-64-avx2 COMP=${{ matrix.comp }} COMPCXX=${{ matrix.cxx }}
+      # - name: Build avx2 binary
+      #   working-directory: src
+      #   run: |
+      #     export CXXFLAGS="-Werror"
+      #     if [ "${{ matrix.ver }}" -ge 20 ]; then
+      #       apt install -y lld
+      #     fi
+      #     make clean
+      #     make -j build ARCH=x86-64-avx2 COMP=${{ matrix.comp }} COMPCXX=${{ matrix.cxx }}
 
-      - name: Smoke test
-        working-directory: src
-        run: ./DON bench 16 1 6
+      # - name: Smoke test
+      #   working-directory: src
+      #   run: ./DON bench 16 1 6
