--- a/.github/workflows/DON-setup.yml
+++ b/.github/workflows/DON-setup.yml
@@ -44,23 +44,23 @@ jobs:
           fi
 
       - name: Echo deleting pre-release
-        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
+        #if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         run: |
           echo "Deleting pre-release: DON-dev-$COMMIT_DATE-$COMMIT_SHA if it exists..."
       - name: Delete existing pre-release
-        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
+        #if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
         with:
           tag_name: DON-dev-${{ env.COMMIT_DATE }}-${{ env.COMMIT_SHA }}
           delete: true
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Echo creating pre-release
-        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
+        #if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         run: |
           echo "Creating pre-release: DON-dev-$COMMIT_DATE-$COMMIT_SHA..."
       # Create new pre-release, upload_binaries.yml will upload the binaries to pre-release.
       - name: Create Pre-release (force recreate)
-        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
+        #if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
         with:
           name: DON dev-${{ env.COMMIT_DATE }}-${{ env.COMMIT_SHA }}
