--- a/.github/workflows/DON-setup.yml
+++ b/.github/workflows/DON-setup.yml
@@ -20,21 +20,23 @@ jobs:
         with:
           persist-credentials: false
 
-      # Returns null if no pre-release exists
-      - name: Get Commit SHA of Latest Pre-release
+      - name: Delete previous pre-release and tag
+        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         run: |
           # Install required packages
           sudo apt-get update
           sudo apt-get install -y curl jq
 
           # Get the first pre-release tag_name
-          COMMIT_SHA_TAG=$(curl -s https://api.github.com/repos/${{ github.repository_owner }}/DON/releases \
+          COMMIT_SHA_TAG=$(curl -s https://api.github.com/repos/${GITHUB_REPOSITORY}/releases \
             | jq -r 'map(select(.prerelease)) | first | .tag_name')
-          echo "COMMIT_SHA_TAG=$COMMIT_SHA_TAG" >> $GITHUB_ENV
 
-      - name: Delete previous pre-release and tag
-        if: env.COMMIT_SHA_TAG != 'null'
-        run: gh release delete "$COMMIT_SHA_TAG" --cleanup-tag -y || true
+          if [ "$COMMIT_SHA_TAG" != "null" ]; then
+            echo "Deleting previous pre-release: $COMMIT_SHA_TAG ..."
+            gh release delete "$COMMIT_SHA_TAG" --cleanup-tag -y || true
+          else
+            echo "No previous pre-release found, nothing to delete."
+          fi
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -62,7 +64,7 @@ jobs:
           fi
 
       - name: Delete existing pre-release
-        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
+        #if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         run: |
           TAG="DON-dev-$COMMIT_DATE-$COMMIT_SHA"
           echo "Deleting pre-release $TAG if it exists..."
@@ -129,7 +131,6 @@ jobs:
     with:
       matrix: ${{ needs.Matrix.outputs.arm_matrix }}
   Binaries:
-    if: github.repository == 'ehsanrashid/DON'
     needs: [Prerelease, Matrix, Compilation]
     uses: ./.github/workflows/upload_binaries.yml
     with:
@@ -139,7 +140,6 @@ jobs:
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
   ARM_Binaries:
-    if: github.repository == 'ehsanrashid/DON'
     needs: [Prerelease, Matrix, ARMCompilation]
     uses: ./.github/workflows/upload_binaries.yml
     with:
