--- a/.github/workflows/upload_binaries.yml
+++ b/.github/workflows/upload_binaries.yml
@@ -83,17 +83,24 @@ jobs:
             echo "OFFICIAL_RELEASE=false" >> $GITHUB_ENV
           fi
 
+      - name: Delete existing Pre-release
+        #if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
+        run: |
+          TAG="DON-dev-${COMMIT_DATE}-${COMMIT_SHA}"
+          echo "Deleting Pre-release $TAG (if it exists)"
+          gh release delete "$TAG" --cleanup-tag -y || true
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       # Upload pre-release asset (dev build)
       - name: Upload Pre-release Asset
         #if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
-        continue-on-error: true
         uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
         with:
           name: DON dev-${{ env.COMMIT_DATE }}-${{ env.COMMIT_SHA }}
           tag_name: DON-dev-${{ env.COMMIT_DATE }}-${{ env.COMMIT_SHA }}
           files: DON-${{ matrix.config.simple_name }}-${{ matrix.binaries }}.${{ matrix.config.archive_ext }}
           prerelease: true
-          clobber: true
           token: ${{ secrets.token }}
 
       # Upload official release asset (tagged commit)
