--- a/.github/workflows/DON-setup.yml
+++ b/.github/workflows/DON-setup.yml
@@ -10,7 +10,7 @@ on:
       - main
 jobs:
   Prerelease:
-    #if: github.repository == 'ehsanrashid/DON' && (github.ref == 'refs/heads/main' || (startsWith(github.ref_name, 'DON_') && github.ref_type == 'tag'))
+    if: github.repository == 'ehsanrashid/DON' && (github.ref == 'refs/heads/main' || (startsWith(github.ref_name, 'DON_') && github.ref_type == 'tag'))
     runs-on: ubuntu-latest
     needs: [Matrix]
     permissions:
@@ -21,7 +21,7 @@ jobs:
           persist-credentials: false
 
       - name: Delete previous pre-release and tag
-        #if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
+        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         run: |
           # Install required packages
           sudo apt-get update
@@ -63,7 +63,7 @@ jobs:
           fi
 
       - name: Delete existing pre-release
-        #if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
+        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         run: |
           TAG="DON-dev-$COMMIT_DATE-$COMMIT_SHA"
           echo "Deleting pre-release $TAG if it exists..."
@@ -71,12 +71,12 @@ jobs:
         env:
          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Echo creating pre-release
-        #if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
+        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         run: |
           echo "Creating pre-release: DON-dev-$COMMIT_DATE-$COMMIT_SHA..."
       # Create new pre-release, upload_binaries.yml will upload the binaries to pre-release.
       - name: Create Pre-release (force recreate)
-        #if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
+        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
         with:
           name: DON dev-${{ env.COMMIT_DATE }}-${{ env.COMMIT_SHA }}
@@ -129,7 +129,7 @@ jobs:
     with:
       matrix: ${{ needs.Matrix.outputs.arm_matrix }}
   Binaries:
-    if: github.repository == 'ehsanrashid/DON'  
+    if: github.repository == 'ehsanrashid/DON'
     needs: [Prerelease, Matrix, Compilation]
     uses: ./.github/workflows/upload_binaries.yml
     with:
@@ -139,7 +139,7 @@ jobs:
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
   ARM_Binaries:
-    if: github.repository == 'ehsanrashid/DON'  
+    if: github.repository == 'ehsanrashid/DON'
     needs: [Prerelease, Matrix, ARMCompilation]
     uses: ./.github/workflows/upload_binaries.yml
     with:
