--- a/.github/workflows/DON-setup.yml
+++ b/.github/workflows/DON-setup.yml
@@ -1,10 +1,10 @@
 name: DON-setup
 on:
   push:
-    tags:
-      - "*"
     branches:
       - main
+    tags:
+      - "DON_*"
   pull_request:
     branches:
       - main
@@ -62,26 +62,25 @@ jobs:
             echo "This is NOT an official release."
           fi
 
-      - name: Delete existing pre-release
-        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
-        run: |
-          TAG="DON-dev-$COMMIT_DATE-$COMMIT_SHA"
-          echo "Deleting pre-release $TAG if it exists..."
-          gh release delete "$TAG" --cleanup-tag -y || true
-        env:
-         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Echo creating pre-release
-        if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
-        run: |
-          echo "Creating pre-release: DON-dev-$COMMIT_DATE-$COMMIT_SHA..."
-      # Create new pre-release, binaries will uploaded to pre-release
-      - name: Create Pre-release (force recreate)
+      # Create pre-release
+      - name: Create Pre-release
         if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
         with:
           name: DON dev-${{ env.COMMIT_DATE }}-${{ env.COMMIT_SHA }}
           tag_name: DON-dev-${{ env.COMMIT_DATE }}-${{ env.COMMIT_SHA }}
           prerelease: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+      # Create official release
+      - name: Create Official Release
+        if: startsWith(github.ref_name, 'DON_') && github.ref_type == 'tag'
+        uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
+        with:
+          name: DON ${{ github.ref_name }}
+          tag_name: ${{ github.ref_name }}
+          prerelease: false
+          body: Official release version of DON
+          token: ${{ secrets.GITHUB_TOKEN }}
   Matrix:
     runs-on: ubuntu-latest
     outputs:
